--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "react-dom": "18.2.0",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "20.6.5",
+    "@types/react": "18.2.22",
+    "typescript": "5.2.2"
   }
 }
